--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -6,192 +6,203 @@
     android:layout_height="match_parent"
     tools:context=".Einstellungen">
 
-    <include layout="@layout/toolbar_3" />
+    <include
+        android:id="@+id/include6"
+        layout="@layout/toolbar_3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="175dp"
-        android:text="Einstellungen"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/include6" />
 
-    <androidx.gridlayout.widget.GridLayout
-        android:layout_width="287dp"
-        android:layout_height="438dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="65dp"
-        app:columnCount="2"
+    <LinearLayout
+        android:layout_width="289dp"
+        android:layout_height="468dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="158dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:rowCount="5">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.039">
 
         <TextView
-            android:id="@+id/textView25"
+            android:id="@+id/textView17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="50dp"
-            android:text="Helles / Dunkles Design"
-            android:textStyle="bold"
-            app:layout_column="0"
-            app:layout_row="0" />
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp"
+            android:text="Einstellungen"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView76"
-            android:layout_width="wrap_content"
+        <androidx.gridlayout.widget.GridLayout
+            android:layout_width="297dp"
             android:layout_height="wrap_content"
-            android:paddingTop="20dp"
-            android:text="Schriftgröße"
-            android:textStyle="bold"
-            app:layout_column="0"
-            app:layout_row="1" />
-
-        <Switch
-            android:id="@+id/switch2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_column="1"
-            app:layout_row="0" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="20dp"
-            app:layout_column="0"
-            app:layout_row="2">
+            android:layout_gravity="clip_horizontal"
+            app:columnCount="2"
+            app:rowCount="5">
 
             <TextView
-                android:id="@+id/textView78"
+                android:id="@+id/textView25"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Appsperrung einrichten"
-                android:textStyle="bold" />
-
-            <Spinner
-                android:id="@+id/spinner2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:entries="@array/data" />
-
-        </LinearLayout>
-
-        <Switch
-            android:id="@+id/switch4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_column="1"
-            app:layout_row="2" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="20dp"
-            app:layout_column="0"
-            app:layout_row="3">
+                android:layout_marginRight="50dp"
+                android:text="Helles / Dunkles Design"
+                android:textStyle="bold"
+                app:layout_column="0"
+                app:layout_row="0" />
 
             <TextView
-                android:id="@+id/textView83"
+                android:id="@+id/textView76"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Benachrichtungen"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/textView81"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Mitteilungen" />
-
-            <TextView
-                android:id="@+id/textView82"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Erinnerung an Tagesziele" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_column="1"
-            app:layout_row="3">
+                android:paddingTop="20dp"
+                android:text="Schriftgröße"
+                android:textStyle="bold"
+                app:layout_column="0"
+                app:layout_row="1" />
 
             <Switch
-                android:id="@+id/switch5"
+                android:id="@+id/switch2"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:layout_column="1"
+                app:layout_row="0" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="20dp"
+                app:layout_column="0"
+                app:layout_row="2">
+
+                <TextView
+                    android:id="@+id/textView78"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Appsperrung einrichten"
+                    android:textStyle="bold" />
+
+                <Spinner
+                    android:id="@+id/spinner2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/data" />
+
+            </LinearLayout>
 
             <Switch
-                android:id="@+id/switch7"
+                android:id="@+id/switch4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_column="1"
                 app:layout_row="2" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingTop="20dp"
-            app:layout_column="0"
-            app:layout_row="4">
-
-            <TextView
-                android:id="@+id/textView77"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Notfallkontakte"
-                android:textStyle="bold" />
+                android:orientation="vertical"
+                android:paddingTop="20dp"
+                app:layout_column="0"
+                app:layout_row="3">
 
-            <TextView
-                android:id="@+id/textView79"
-                android:layout_width="210dp"
-                android:layout_height="99dp"
-                android:text="Nach der Aktivierung startet ein Notfallthreshold sobald die Notfalltaste aktiviert wird. Nachdem dieser abläuft, wird der ausgewählte Notfallkontakt automatisch alarmiert." />
+                <TextView
+                    android:id="@+id/textView83"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Benachrichtungen"
+                    android:textStyle="bold" />
 
-            <Spinner
-                android:id="@+id/spinner3"
+                <TextView
+                    android:id="@+id/textView81"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Mitteilungen" />
+
+                <TextView
+                    android:id="@+id/textView82"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Erinnerung an Tagesziele" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:entries="@array/data2" />
-        </LinearLayout>
+                android:orientation="vertical"
+                app:layout_column="1"
+                app:layout_row="3">
 
-        <Switch
-            android:id="@+id/switch8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_column="1"
-            app:layout_row="4" />
+                <Switch
+                    android:id="@+id/switch5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-        <SeekBar
-            android:id="@+id/seekBar"
-            android:layout_width="69dp"
-            android:layout_height="wrap_content"
-            app:layout_column="1"
-            app:layout_gravity="center"
-            app:layout_row="1" />
+                <Switch
+                    android:id="@+id/switch7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_column="1"
+                    app:layout_row="2" />
+            </LinearLayout>
 
-    </androidx.gridlayout.widget.GridLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingTop="20dp"
+                app:layout_column="0"
+                app:layout_row="4">
+
+                <TextView
+                    android:id="@+id/textView77"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Notfallkontakte"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView79"
+                    android:layout_width="210dp"
+                    android:layout_height="wrap_content"
+                    android:text="Nach der Aktivierung startet ein Notfallthreshold sobald die Notfalltaste aktiviert wird. Nachdem dieser abläuft, wird der ausgewählte Notfallkontakt automatisch alarmiert." />
+
+                <Spinner
+                    android:id="@+id/spinner3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:entries="@array/data2" />
+            </LinearLayout>
+
+            <Switch
+                android:id="@+id/switch8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_column="1"
+                app:layout_row="4" />
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="69dp"
+                android:layout_height="wrap_content"
+                app:layout_column="1"
+                app:layout_gravity="center"
+                app:layout_row="1" />
+
+        </androidx.gridlayout.widget.GridLayout>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
