--- a/app/src/main/res/layout/activity_tagesbuch.xml
+++ b/app/src/main/res/layout/activity_tagesbuch.xml
@@ -2,15 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Tagebuch">
 
     <include
-        android:id="@+id/include21"
+        android:id="@+id/include5"
         layout="@layout/toolbar_3"
-        android:layout_width="413dp"
-        android:layout_height="58dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,21 +16,17 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom"
-        android:layout_width="402dp"
-        android:layout_height="53dp"
-        android:layout_marginEnd="9dp"
+        android:layout_marginTop="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include21" />
+        app:layout_constraintTop_toBottomOf="@+id/include5" />
 
     <ScrollView
-        android:layout_width="336dp"
-        android:layout_height="583dp"
-        android:layout_marginStart="63dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="68dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.303"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
@@ -40,6 +34,8 @@
             android:id="@+id/linearLayout9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:orientation="vertical">
 
             <TextView
@@ -101,8 +97,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_marginTop="30dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <Spinner
@@ -116,12 +112,21 @@
 
             <CalendarView
                 android:id="@+id/calendarView"
-                android:layout_width="296dp"
-                android:layout_height="277dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp" />
+                android:layout_width="316dp"
+                android:layout_height="307dp"
+                android:layout_gravity="center" />
 
         </LinearLayout>
     </ScrollView>
+    <!--    <include-->
+    <!--        android:id="@+id/include21"-->
+    <!--        layout="@layout/toolbar_3"-->
+    <!--        android:layout_width="16dp"-->
+    <!--        android:layout_height="wrap_content" />-->
+
+    <!--    <include-->
+    <!--        android:id="@+id/toolbar"-->
+    <!--        layout="@layout/toolbar_bottom"-->
+    <!--        tools:layout_editor_absoluteY="60dp" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
