--- a/app/src/main/res/layout/activity_wiki_info.xml
+++ b/app/src/main/res/layout/activity_wiki_info.xml
@@ -44,11 +44,12 @@
             <TextView
                 android:id="@+id/wiki_source"
                 android:layout_width="match_parent"
-                android:layout_height="109dp"
+                android:layout_height="wrap_content"
                 android:layout_marginEnd="0dp"
+                android:onClick="openBrowser"
                 android:text="TextView"
                 android:textColor="#2196F3"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
