--- a/app/src/main/res/layout/activity_tagesziel_1.xml
+++ b/app/src/main/res/layout/activity_tagesziel_1.xml
@@ -14,107 +14,109 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar_bottom" />
 
-    <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="538dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="37dp"
-        android:orientation="vertical"
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
-        <TextView
-            android:id="@+id/textView88"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Heute"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/daily_activityCBinTagesziel"
-                android:layout_width="49dp"
-                android:layout_height="match_parent"
-                android:enabled="false" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textViewDAinTagesziel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="137dp" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/addButton2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@mipmap/ic_add" />
-
-        <TextView
-            android:id="@+id/textView95"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Vergangene Tagesziele"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/spinner4"
+                android:id="@+id/textView88"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:entries="@array/data3" />
+                android:text="Heute"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="61dp"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/daily_activityCBinTagesziel"
+                    android:layout_width="49dp"
+                    android:layout_height="match_parent"
+                    android:enabled="false" />
+
+                <TextView
+                    android:id="@+id/textViewDAinTagesziel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="TextView"
+                    tools:layout_editor_absoluteX="16dp"
+                    tools:layout_editor_absoluteY="137dp" />
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/addButton2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@mipmap/ic_add" />
 
             <TextView
-                android:id="@+id/textView96"
+                android:id="@+id/textView95"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="Vergangene Tagesziele"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:orientation="horizontal">
 
+                <Spinner
+                    android:id="@+id/tagesZielSpinner"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:entries="@array/data3" />
+
+                <TextView
+                    android:id="@+id/textView96"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/tzImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="20dp"
+                app:srcCompat="@drawable/t1" />
+
+            <Button
+                android:id="@+id/button24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="Details" />
 
         </LinearLayout>
+    </ScrollView>
 
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="296dp"
-            android:layout_height="189dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/pic" />
-
-        <Button
-            android:id="@+id/button24"
-            android:layout_width="113dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="Details" />
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
