--- a/app/src/main/res/layout/activity_appnutzungszweck.xml
+++ b/app/src/main/res/layout/activity_appnutzungszweck.xml
@@ -10,10 +10,11 @@
     <include
         android:id="@+id/include8"
         layout="@layout/toolbar_bottom" />
+
     <CheckBox
         android:id="@+id/checkBox4"
-        android:layout_width="343dp"
-        android:layout_height="41dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Qualität der sozialen Interaktion verbessern"
         android:textSize="16sp"
@@ -22,8 +23,8 @@
 
     <CheckBox
         android:id="@+id/checkBox5"
-        android:layout_width="213dp"
-        android:layout_height="39dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="Depressionen behandeln"
         android:textSize="16sp"
@@ -33,8 +34,8 @@
 
     <CheckBox
         android:id="@+id/checkBox"
-        android:layout_width="207dp"
-        android:layout_height="43dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Stresslevel reduzieren"
         android:textSize="16sp"
