--- a/app/src/main/res/layout/activity_appnutzungszweck.xml
+++ b/app/src/main/res/layout/activity_appnutzungszweck.xml
@@ -45,11 +45,11 @@
     <TextView
         android:id="@+id/activityName"
         android:layout_width="340dp"
-        android:layout_height="86dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="52dp"
-        android:text="Wählen Sie einen oder mehrere Zweck(e) aus für die Sie die App nutzen möchten. Die Auswahl beeinflusst die Übungen, die Ihnen später empholen werden."
+        android:text="Wählen Sie einen oder mehrere Zweck(e) aus für die Sie die App nutzen möchten. Die Auswahl beeinflusst die Übungen, die Ihnen später empfohlen werden."
         android:textColor="#000000"
         android:textSize="16sp"
         android:textStyle="normal"
